--- a/index.html
+++ b/index.html
@@ -1846,8 +1846,8 @@
     
                 <div class="relative z-10 mb-4 flex items-center justify-center overflow-hidden bg-primary px-6 py-12 sm:mb-8 sm:h-[160px] sm:p-5 lg:mb-4 xl:mb-8">
                   <div>
-                    <span class="block text-5xl font-extrabold text-white">09</span>
-                    <span class="block text-base font-semibold text-white">Years of Experience</span>
+                    <span class="block text-5xl font-extrabold text-white">Trust</span>
+                    <span class="block text-base font-semibold text-white">Our Experience</span>
                     <span class="block text-base font-medium text-white text-opacity-70">In AI and Customer Support</span>
                   </div>
                   <div>
@@ -3388,134 +3388,6 @@
 
  
 
-    <!-- ====== Blog Section Start -->
-    <section class="bg-white pb-10 pt-20 dark:bg-dark lg:pb-20 lg:pt-[120px]">
-      <div class="container mx-auto">
-        <div class="-mx-4 flex flex-wrap justify-center">
-          <div class="w-full px-4">
-            <div class="mx-auto mb-[60px] max-w-[485px] text-center">
-              <span class="mb-2 block text-lg font-semibold text-primary">
-                Our Blogs
-              </span>
-              <h2
-                class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]"
-              >
-                Our Recent News
-              </h2>
-              <p class="text-base text-body-color dark:text-dark-6">
-                There are many variations of passages of Lorem Ipsum available
-                but the majority have suffered alteration in some form.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="-mx-4 flex flex-wrap">
-          <div class="w-full px-4 md:w-1/2 lg:w-1/3">
-            <div class="wow fadeInUp group mb-10" data-wow-delay=".1s">
-              <div class="mb-8 overflow-hidden rounded-[5px]">
-                <a href="blog-details.html" class="block">
-                  <img
-                    src="./assets/images/blog/blog-01.jpg"
-                    alt="image"
-                    class="w-full transition group-hover:rotate-6 group-hover:scale-125"
-                  />
-                </a>
-              </div>
-              <div>
-                <span
-                  class="mb-6 inline-block rounded-[5px] bg-primary px-4 py-0.5 text-center text-xs font-medium leading-loose text-white"
-                >
-                  Dec 22, 2023
-                </span>
-                <h3>
-                  <a
-                    href="javascript:void(0)"
-                    class="mb-4 inline-block text-xl font-semibold text-dark hover:text-primary dark:text-white dark:hover:text-primary sm:text-2xl lg:text-xl xl:text-2xl"
-                  >
-                    Meet AutoManage, the best AI management tools
-                  </a>
-                </h3>
-                <p
-                  class="max-w-[370px] text-base text-body-color dark:text-dark-6"
-                >
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="w-full px-4 md:w-1/2 lg:w-1/3">
-            <div class="wow fadeInUp group mb-10" data-wow-delay=".15s">
-              <div class="mb-8 overflow-hidden rounded-[5px]">
-                <a href="blog-details.html" class="block">
-                  <img
-                    src="./assets/images/blog/blog-02.jpg"
-                    alt="image"
-                    class="w-full transition group-hover:rotate-6 group-hover:scale-125"
-                  />
-                </a>
-              </div>
-              <div>
-                <span
-                  class="mb-6 inline-block rounded-[5px] bg-primary px-4 py-0.5 text-center text-xs font-medium leading-loose text-white"
-                >
-                  Mar 15, 2023
-                </span>
-                <h3>
-                  <a
-                    href="javascript:void(0)"
-                    class="mb-4 inline-block text-xl font-semibold text-dark hover:text-primary dark:text-white dark:hover:text-primary sm:text-2xl lg:text-xl xl:text-2xl"
-                  >
-                    How to earn more money as a wellness coach
-                  </a>
-                </h3>
-                <p
-                  class="max-w-[370px] text-base text-body-color dark:text-dark-6"
-                >
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="w-full px-4 md:w-1/2 lg:w-1/3">
-            <div class="wow fadeInUp group mb-10" data-wow-delay=".2s">
-              <div class="mb-8 overflow-hidden rounded-[5px]">
-                <a href="blog-details.html" class="block">
-                  <img
-                    src="./assets/images/blog/blog-03.jpg"
-                    alt="image"
-                    class="w-full transition group-hover:rotate-6 group-hover:scale-125"
-                  />
-                </a>
-              </div>
-              <div>
-                <span
-                  class="mb-6 inline-block rounded-[5px] bg-primary px-4 py-0.5 text-center text-xs font-medium leading-loose text-white"
-                >
-                  Jan 05, 2023
-                </span>
-                <h3>
-                  <a
-                    href="javascript:void(0)"
-                    class="mb-4 inline-block text-xl font-semibold text-dark hover:text-primary dark:text-white dark:hover:text-primary sm:text-2xl lg:text-xl xl:text-2xl"
-                  >
-                    The no-fuss guide to upselling and cross selling
-                  </a>
-                </h3>
-                <p
-                  class="max-w-[370px] text-base text-body-color dark:text-dark-6"
-                >
-                  Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ====== Blog Section End -->
 
     <!-- ====== Contact Start ====== -->
     <section id="contact" class="relative py-20 md:py-[120px]">
@@ -3530,7 +3402,7 @@
     <!-- ====== Contact End ====== -->
 
     <!-- ====== Brands Section Start -->
-    <section class="pb-20 dark:bg-dark">
+    <!-- <section class="pb-20 dark:bg-dark">
       <div class="container px-4">
         <div
           class="-mx-4 flex flex-wrap items-center justify-center gap-8 xl:gap-11"
@@ -3597,7 +3469,7 @@
           </a>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- ====== Brands Section End -->
 
     <!-- ====== Footer Section Start -->
