--- a/Benefits.html
+++ b/Benefits.html
@@ -57,7 +57,7 @@
                 <span class="relative my-[6px] block h-[2px] w-[30px] bg-dark dark:bg-white"></span>
                 <span class="relative my-[6px] block h-[2px] w-[30px] bg-dark dark:bg-white"></span>
               </button>
-              <nav id="navbarCollapse" class="absolute right-4 top-full hidden w-full max-w-[250px] rounded-lg bg-white dark:bg-dark-2 py-5 shadow-lg lg:static lg:block lg:w-full lg:max-w-full lg:bg-transparent dark:lg:bg-transparent lg:py-0 lg:px-4 lg:shadow-none xl:px-6 margin: 0;">
+              <nav id="navbarCollapse" class="absolute right-4 top-full hidden w-full max-w-[250px] rounded-lg bg-white bg-white py-5 shadow-lg lg:static lg:block lg:w-full lg:max-w-full lg:bg-transparent dark:lg:bg-transparent lg:py-0 lg:px-4 lg:shadow-none xl:px-6 margin: 0;">
                 <ul class="block lg:flex 2xl:ml-20"  style=" padding: 0; margin: 0;" >
                   <li class="relative submenu-item group">
                     <a href="javascript:void(0)" class="relative flex items-center justify-between py-2 mx-8 text-base font-medium text-dark dark:text-white hover:opacity-70 group-hover:text-primary lg:mr-0 lg:ml-8 lg:inline-flex lg:py-6 lg:pl-0 lg:pr-4 xl:ml-10">
@@ -250,7 +250,7 @@
     <!-- ======  About Benefit Section Start -->
     <section
     id="about"
-    class="bg-gray-1 pb-8 pt-20 dark:bg-dark-2 lg:pb-[70px] lg:pt-[120px]"
+    class="bg-gray-1 pb-8 pt-20 bg-white lg:pb-[70px] lg:pt-[120px]"
   >
     <div class="container">
       <div class="wow fadeInUp" data-wow-delay=".2s">
