--- a/Enterprise.html
+++ b/Enterprise.html
@@ -251,7 +251,7 @@
     <!-- ======  About Benefit Section Start -->
     <section
     id="about"
-    class="bg-gray-1 pb-8 pt-20 dark:bg-dark-2 lg:pb-[70px] lg:pt-[120px]"
+    class="bg-gray-1 pb-8 pt-20 bg-white lg:pb-[70px] lg:pt-[120px]"
 >
     <div class="container">
         <div class="wow fadeInUp" data-wow-delay=".2s">
