--- a/Shopfiy.html
+++ b/Shopfiy.html
@@ -305,6 +305,117 @@
       </div>
       
         <!-- ====== Navbar Section End -->
+
+        <!-- ====== About Section Start -->
+<section id="about" class="bg-gray-1 pb-8 pt-20 bg-white lg:pb-[70px] lg:pt-[120px]">
+  <div class="container">
+      <div class="wow fadeInUp" data-wow-delay=".2s">
+          <div class="-mx-4 flex flex-wrap items-center">
+              <!-- Text Content -->
+              <div class="w-full px-4 lg:w-1/2">
+                  <div class="mb-12 max-w-[540px] lg:mb-0">
+                      <h2
+                          class="mb-5 text-3xl font-bold leading-tight text-dark dark:text-white sm:text-[40px] sm:leading-[1.2]">
+                          Empower Your Customer Support with Our Advanced AI Chatbot
+                      </h2>
+                      <p class="mb-10 text-base leading-relaxed text-body-color dark:text-dark-6">
+                          Discover how our AI chatbot can transform your customer support experience. With a focus on
+                          efficiency and accuracy, our chatbot offers:
+                      <ul class="list-disc pl-5 mt-4">
+                          <li>Instant answers from your website and help center</li>
+                          <li>Advanced natural language processing for accurate interactions</li>
+                          <li>Seamless integration with existing resources and support systems</li>
+                          <li>24/7 customer support for continuous assistance</li>
+                          <li>Customizable knowledge base and insightful analytics</li>
+                      </ul>
+                      <br />
+                      Leverage these features to build a smarter, more responsive support system for your customers.
+                      </p>
+                  </div>
+              </div>
+
+              <!-- Images and Stats -->
+              <div class="w-full px-4 lg:w-1/2">
+                  <div class="-mx-2 flex flex-wrap sm:-mx-4 lg:-mx-2 xl:-mx-4">
+                      <div class="w-full px-2 sm:w-1/2 sm:px-4 lg:px-2 xl:px-4">
+                          <div class="mb-4 sm:mb-8 sm:h-[400px] md:h-[540px] lg:h-[400px] xl:h-[500px]">
+                              <img src="https://cdn.dribbble.com/users/872089/screenshots/9072270/media/5b305e27597d7cef16b199a7e58eccbd.png"
+                                  alt="AI Chatbot Feature" class="h-full w-full object-cover object-center" />
+                          </div>
+                      </div>
+
+                      <div class="w-full px-2 sm:w-1/2 sm:px-4 lg:px-2 xl:px-4">
+                          <div
+                              class="mb-4 sm:mb-8 sm:h-[220px] md:h-[346px] lg:mb-4 lg:h-[225px] xl:mb-8 xl:h-[310px]">
+                              <img src="https://i.pinimg.com/564x/1e/b0/5f/1eb05f325ec50a15c8b045f3428d6d5e.jpg"
+                                  alt="AI Chatbot Integration" class="h-full w-full object-cover object-center" />
+                          </div>
+
+                          <div
+                              class="relative z-10 mb-4 flex items-center justify-center overflow-hidden bg-primary px-6 py-12 sm:mb-8 sm:h-[160px] sm:p-5 lg:mb-4 xl:mb-8">
+                              <div>
+                                  <span class="block text-5xl font-extrabold text-white">09</span>
+                                  <span class="block text-base font-semibold text-white">Years of Experience</span>
+                                  <span class="block text-base font-medium text-white text-opacity-70">In AI and
+                                      Customer Support</span>
+                              </div>
+                              <div>
+                                  <span class="absolute left-0 top-0 -z-10">
+                                      <svg width="106" height="144" viewBox="0 0 106 144" fill="none"
+                                          xmlns="http://www.w3.org/2000/svg">
+                                          <rect opacity="0.1" x="-67" y="47.127" width="113.378" height="131.304"
+                                              transform="rotate(-42.8643 -67 47.127)"
+                                              fill="url(#paint0_linear_1416_214)" />
+                                          <defs>
+                                              <linearGradient id="paint0_linear_1416_214" x1="-10.3111" y1="47.127"
+                                                  x2="-10.3111" y2="178.431" gradientUnits="userSpaceOnUse">
+                                                  <stop stop-color="white" />
+                                                  <stop offset="1" stop-color="white" stop-opacity="0" />
+                                              </linearGradient>
+                                          </defs>
+                                      </svg>
+                                  </span>
+                                  <span class="absolute right-0 top-0 -z-10">
+                                      <svg width="130" height="97" viewBox="0 0 130 97" fill="none"
+                                          xmlns="http://www.w3.org/2000/svg">
+                                          <rect opacity="0.1" x="0.86792" y="-6.67725" width="155.563"
+                                              height="140.614" transform="rotate(-42.8643 0.86792 -6.67725)"
+                                              fill="url(#paint0_linear_1416_215)" />
+                                          <defs>
+                                              <linearGradient id="paint0_linear_1416_215" x1="78.6495" y1="-6.67725"
+                                                  x2="78.6495" y2="133.937" gradientUnits="userSpaceOnUse">
+                                                  <stop stop-color="white" />
+                                                  <stop offset="1" stop-color="white" stop-opacity="0" />
+                                              </linearGradient>
+                                          </defs>
+                                      </svg>
+                                  </span>
+                                  <span class="absolute bottom-0 right-0 -z-10">
+                                      <svg width="175" height="104" viewBox="0 0 175 104" fill="none"
+                                          xmlns="http://www.w3.org/2000/svg">
+                                          <rect opacity="0.1" x="175.011" y="108.611" width="101.246" height="148.179"
+                                              transform="rotate(137.136 175.011 108.611)"
+                                              fill="url(#paint0_linear_1416_216)" />
+                                          <defs>
+                                              <linearGradient id="paint0_linear_1416_216" x1="225.634" y1="108.611"
+                                                  x2="225.634" y2="256.79" gradientUnits="userSpaceOnUse">
+                                                  <stop stop-color="white" />
+                                                  <stop offset="1" stop-color="white" stop-opacity="0" />
+                                              </linearGradient>
+                                          </defs>
+                                      </svg>
+                                  </span>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
+<!-- ====== About Section End -->
       
   
 
@@ -461,116 +572,7 @@
 
 
 
-<!-- ====== About Section Start -->
-<section id="about" class="bg-gray-1 pb-8 pt-20 dark:bg-dark-2 lg:pb-[70px] lg:pt-[120px]">
-    <div class="container">
-        <div class="wow fadeInUp" data-wow-delay=".2s">
-            <div class="-mx-4 flex flex-wrap items-center">
-                <!-- Text Content -->
-                <div class="w-full px-4 lg:w-1/2">
-                    <div class="mb-12 max-w-[540px] lg:mb-0">
-                        <h2
-                            class="mb-5 text-3xl font-bold leading-tight text-dark dark:text-white sm:text-[40px] sm:leading-[1.2]">
-                            Empower Your Customer Support with Our Advanced AI Chatbot
-                        </h2>
-                        <p class="mb-10 text-base leading-relaxed text-body-color dark:text-dark-6">
-                            Discover how our AI chatbot can transform your customer support experience. With a focus on
-                            efficiency and accuracy, our chatbot offers:
-                        <ul class="list-disc pl-5 mt-4">
-                            <li>Instant answers from your website and help center</li>
-                            <li>Advanced natural language processing for accurate interactions</li>
-                            <li>Seamless integration with existing resources and support systems</li>
-                            <li>24/7 customer support for continuous assistance</li>
-                            <li>Customizable knowledge base and insightful analytics</li>
-                        </ul>
-                        <br />
-                        Leverage these features to build a smarter, more responsive support system for your customers.
-                        </p>
-                    </div>
-                </div>
 
-                <!-- Images and Stats -->
-                <div class="w-full px-4 lg:w-1/2">
-                    <div class="-mx-2 flex flex-wrap sm:-mx-4 lg:-mx-2 xl:-mx-4">
-                        <div class="w-full px-2 sm:w-1/2 sm:px-4 lg:px-2 xl:px-4">
-                            <div class="mb-4 sm:mb-8 sm:h-[400px] md:h-[540px] lg:h-[400px] xl:h-[500px]">
-                                <img src="https://cdn.dribbble.com/users/872089/screenshots/9072270/media/5b305e27597d7cef16b199a7e58eccbd.png"
-                                    alt="AI Chatbot Feature" class="h-full w-full object-cover object-center" />
-                            </div>
-                        </div>
-
-                        <div class="w-full px-2 sm:w-1/2 sm:px-4 lg:px-2 xl:px-4">
-                            <div
-                                class="mb-4 sm:mb-8 sm:h-[220px] md:h-[346px] lg:mb-4 lg:h-[225px] xl:mb-8 xl:h-[310px]">
-                                <img src="https://i.pinimg.com/564x/1e/b0/5f/1eb05f325ec50a15c8b045f3428d6d5e.jpg"
-                                    alt="AI Chatbot Integration" class="h-full w-full object-cover object-center" />
-                            </div>
-
-                            <div
-                                class="relative z-10 mb-4 flex items-center justify-center overflow-hidden bg-primary px-6 py-12 sm:mb-8 sm:h-[160px] sm:p-5 lg:mb-4 xl:mb-8">
-                                <div>
-                                    <span class="block text-5xl font-extrabold text-white">09</span>
-                                    <span class="block text-base font-semibold text-white">Years of Experience</span>
-                                    <span class="block text-base font-medium text-white text-opacity-70">In AI and
-                                        Customer Support</span>
-                                </div>
-                                <div>
-                                    <span class="absolute left-0 top-0 -z-10">
-                                        <svg width="106" height="144" viewBox="0 0 106 144" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <rect opacity="0.1" x="-67" y="47.127" width="113.378" height="131.304"
-                                                transform="rotate(-42.8643 -67 47.127)"
-                                                fill="url(#paint0_linear_1416_214)" />
-                                            <defs>
-                                                <linearGradient id="paint0_linear_1416_214" x1="-10.3111" y1="47.127"
-                                                    x2="-10.3111" y2="178.431" gradientUnits="userSpaceOnUse">
-                                                    <stop stop-color="white" />
-                                                    <stop offset="1" stop-color="white" stop-opacity="0" />
-                                                </linearGradient>
-                                            </defs>
-                                        </svg>
-                                    </span>
-                                    <span class="absolute right-0 top-0 -z-10">
-                                        <svg width="130" height="97" viewBox="0 0 130 97" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <rect opacity="0.1" x="0.86792" y="-6.67725" width="155.563"
-                                                height="140.614" transform="rotate(-42.8643 0.86792 -6.67725)"
-                                                fill="url(#paint0_linear_1416_215)" />
-                                            <defs>
-                                                <linearGradient id="paint0_linear_1416_215" x1="78.6495" y1="-6.67725"
-                                                    x2="78.6495" y2="133.937" gradientUnits="userSpaceOnUse">
-                                                    <stop stop-color="white" />
-                                                    <stop offset="1" stop-color="white" stop-opacity="0" />
-                                                </linearGradient>
-                                            </defs>
-                                        </svg>
-                                    </span>
-                                    <span class="absolute bottom-0 right-0 -z-10">
-                                        <svg width="175" height="104" viewBox="0 0 175 104" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <rect opacity="0.1" x="175.011" y="108.611" width="101.246" height="148.179"
-                                                transform="rotate(137.136 175.011 108.611)"
-                                                fill="url(#paint0_linear_1416_216)" />
-                                            <defs>
-                                                <linearGradient id="paint0_linear_1416_216" x1="225.634" y1="108.611"
-                                                    x2="225.634" y2="256.79" gradientUnits="userSpaceOnUse">
-                                                    <stop stop-color="white" />
-                                                    <stop offset="1" stop-color="white" stop-opacity="0" />
-                                                </linearGradient>
-                                            </defs>
-                                        </svg>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- ====== About Section End -->
 
 <!-- ====== CTA Section Start -->
 <section class="relative z-10 overflow-hidden bg-primary py-20 lg:py-[115px]">
