--- a/WordPress.html
+++ b/WordPress.html
@@ -307,7 +307,7 @@
       <!-- ====== Navbar Section End -->
 
       <!-- ====== About Section Start -->
-<section id="about" class="bg-gray-1 pb-8 pt-20 dark:bg-dark-2 lg:pb-[70px] lg:pt-[120px]">
+<section id="about" class="bg-gray-1 pb-8 pt-20 bg-white lg:pb-[70px] lg:pt-[120px]">
   <div class="container">
       <div class="wow fadeInUp" data-wow-delay=".2s">
           <div class="-mx-4 flex flex-wrap items-center">
@@ -418,7 +418,7 @@
 <!-- ====== About Section End -->
     
 
-    <section class="relative z-20 overflow-hidden bg-white pb-8 pt-20 dark:bg-dark lg:pb-[50px] lg:pt-[120px]">
+    <section class="relative z-20 overflow-hidden bg-white pb-8 pt-20   dark:bg-dark-2 lg:pb-[50px] lg:pt-[120px]">
         <div class="container">
             <div class="text-center">
                 <h2 class="text-3xl font-bold text-dark dark:text-white sm:text-4xl lg:text-3xl xl:text-4xl">
