--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </title>
     <link
       rel="shortcut icon"
-      href="assets/images/favicon.png"
+      href="assets/images/logo/logo.jpg"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
@@ -486,7 +486,7 @@
             >
               <div class="mt-16">
                 <img
-                  src="assets/images/hero/hero-image.jpg"
+                  src="image.png"
                   alt="hero"
                   class="mx-auto max-w-full rounded-t-xl rounded-tr-xl"
                 />
