--- a/signin.html
+++ b/signin.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign In | Play Tailwind</title>
-  <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="assets/images/logo/logo.jpg" type="image/x-icon" />
   <link rel="stylesheet" href="assets/css/animate.css" />
   <link rel="stylesheet" href="assets/css/tailwind.css" />
 
@@ -285,8 +285,8 @@
             data-wow-delay=".15s">
             <div class="mb-10 text-center">
               <a href="javascript:void(0)" class="mx-auto inline-block max-w-[160px]">
-                <img src="assets/images/logo/logo.svg" alt="logo" class="dark:hidden" />
-                <img src="assets/images/logo/logo-white.svg" alt="logo" class="hidden dark:block" />
+                <img src="assets/images/logo/logo.jpg" alt="logo" class="dark:hidden" />
+                <img src="assets/images/logo/logo.jpg" alt="logo" class="hidden dark:block" />
               </a>
             </div>
             <form>
@@ -808,20 +808,7 @@
   </a>
   <!-- ====== Back To Top End -->
 
-  <!-- ====== Made With Button Start -->
-  <a target="_blank" rel="nofollow noopener"
-    class="inline-flex items-center gap-[10px] py-2 px-[14px] rounded-lg bg-white dark:bg-dark-2 shadow-2 fixed bottom-8 left-4 sm:left-9 z-[999]"
-    href="https://tailgrids.com/">
-    <span class="text-base font-medium text-dark-3 dark:text-dark-6">
-      Made with
-    </span>
-    <span class="block w-px h-4 bg-stroke dark:bg-dark-3"></span>
-    <span class="block max-w-[88px] w-full">
-      <img src="./assets/images/brands/tailgrids.svg" alt="tailgrids" class="dark:hidden">
-      <img src="./assets/images/brands/tailgrids-white.svg" alt="tailgrids" class="hidden dark:block">
-    </span>
-  </a>
-  <!-- ====== Made With Button End -->
+ 
 
   <!-- ====== All Scripts -->
   <script src="assets/js/main.js"></script>
