--- a/signup.html
+++ b/signup.html
@@ -285,8 +285,8 @@
             data-wow-delay=".15s">
             <div class="mb-10 text-center">
               <a href="javascript:void(0)" class="mx-auto inline-block max-w-[160px]">
-                <img src="assets/images/logo/logo.svg" alt="logo" class="dark:hidden" />
-                <img src="assets/images/logo/logo-white.svg" alt="logo" class="hidden dark:block" />
+                <img src="assets/images/logo/logo.jpg" alt="logo" class="dark:hidden" />
+                <img src="assets/images/logo/logo.jpg" alt="logo" class="hidden dark:block" />
               </a>
             </div>
             <form>
