--- a/pricing.html
+++ b/pricing.html
@@ -305,7 +305,7 @@
             </span>
             <h2 class="mb-11 text-4xl font-semibold text-dark dark:text-white xl:leading-[1.21] xl:text-[42px]">
               <span class="text-xl font-medium">$</span>
-              <span class="-ml-1 -tracking-[2px]">25.00</span>
+              <span class="-ml-1 -tracking-[2px]">49.00</span>
               <span class="text-base font-normal text-body-color dark:text-dark-6">
                 Per Month
               </span>
@@ -314,17 +314,26 @@
               <h5 class="mb-5 text-lg font-medium text-dark dark:text-white">Features</h5>
               <div class="flex flex-col gap-[14px]">
                 <p class="text-base text-body-color dark:text-dark-6">
-                  Up to 1 User
+                  Quick response
                 </p>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  All UI components
+                  Custom Answers
+                 </p>
+                <p class="text-base text-body-color dark:text-dark-6">
+                  Multi-User Interaction
                 </p>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  Lifetime access
-                </p>
+                  24/7 Chatting
+                 </p>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  Free updates
-                </p>
+                  No limit on user's word
+                 </p>
+                <p class="text-base text-body-color dark:text-dark-6">
+                  No limit on answers
+               </p>
+                <p class="text-base text-body-color dark:text-dark-6">
+                  Fully anonymous conversation
+               </p>
               </div>
             </div>
             <a href="javascript:void(0)"
@@ -345,7 +354,7 @@
             </span>
             <h2 class="mb-11 text-4xl font-semibold text-dark dark:text-white xl:leading-[1.21] xl:text-[42px]">
               <span class="text-xl font-medium">$</span>
-              <span class="-ml-1 -tracking-[2px]">59.00</span>
+              <span class="-ml-1 -tracking-[2px]">99.00</span>
               <span class="text-base font-normal text-body-color dark:text-dark-6">
                 Per Month
               </span>
@@ -354,16 +363,28 @@
               <h5 class="mb-5 text-lg font-medium text-dark dark:text-white">Features</h5>
               <div class="flex flex-col gap-[14px]">
                 <p class="text-base text-body-color dark:text-dark-6">
-                  Up to 1 User
+                  Quick Response
                 </p>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  All UI components
+                  Custom Answers
                 </p>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  Lifetime access
+                  Multi-User Interaction
+
                 </p>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  Free updates
+                  24/7 Chatting
+
+                </p>
+                <p class="text-base text-body-color dark:text-dark-6">
+                  No limit on user's word
+
+                </p>
+                <p class="text-base text-body-color dark:text-dark-6">
+                  No limit on answers
+                 </p>
+                <p class="text-base text-body-color dark:text-dark-6">
+                  Fully anonymous conversation
                 </p>
               </div>
             </div>
@@ -381,7 +402,7 @@
             </span>
             <h2 class="mb-11 text-4xl font-semibold text-dark dark:text-white xl:leading-[1.21] xl:text-[42px]">
               <span class="text-xl font-medium">$</span>
-              <span class="-ml-1 -tracking-[2px]">99.00</span>
+              <span class="-ml-1 -tracking-[2px]">199.00</span>
               <span class="text-base font-normal text-body-color dark:text-dark-6">
                 Per Month
               </span>
@@ -390,16 +411,32 @@
               <h5 class="mb-5 text-lg font-medium text-dark dark:text-white">Features</h5>
               <div class="flex flex-col gap-[14px]">
                 <p class="text-base text-body-color dark:text-dark-6">
-                  Up to 1 User
+                  Quick Response
+
                 </p>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  All UI components
+                  Custom Answers
+
                 </p>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  Lifetime access
+                  Multi-User Interaction
+
                 </p>
                 <p class="text-base text-body-color dark:text-dark-6">
-                  Free updates
+                  24/7 Chatting
+
+                </p>
+                <p class="text-base text-body-color dark:text-dark-6">
+                  No limit on user's word
+
+                </p>
+                <p class="text-base text-body-color dark:text-dark-6">
+                  No limit on answers
+
+                </p>
+                <p class="text-base text-body-color dark:text-dark-6">
+                  Fully anonymous conversation
+
                 </p>
               </div>
             </div>
