--- a/signup.html
+++ b/signup.html
@@ -289,7 +289,7 @@
                 <img src="assets/images/logo/logo.jpg" alt="logo" class="hidden dark:block" />
               </a>
             </div>
-            <form>
+            <form method="post">
               <div class="mb-[22px]">
                 <input type="text" placeholder="Name"
                   class="w-full px-5 py-3 text-base transition bg-transparent border rounded-md outline-none border-stroke dark:border-dark-3 text-body-color dark:text-dark-6 placeholder:text-dark-6 focus:border-primary dark:focus:border-primary focus-visible:shadow-none" />
