--- a/Sales.html
+++ b/Sales.html
@@ -32,7 +32,7 @@
     </script>
   </head>
 <style>
-  <style>
+  
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
@@ -782,7 +782,7 @@
                       Our Location
                     </h5>
                     <p class="text-base text-body-color dark:text-dark-6">
-                      401 Broadway, 24th Floor, Orchard Cloud View, London
+                      Plot-47,Sanjeevini Nagar,Godhani Road,Zingabai Takli,Nagpur,Maharashtra,440030
                     </p>
                   </div>
                 </div>
