--- a/contact.html
+++ b/contact.html
@@ -305,7 +305,7 @@
                 <div>
                   <h5 class="mb-[18px] text-lg font-semibold text-dark dark:text-white">Our Location</h5>
                   <p class="text-base text-body-color dark:text-dark-6">
-                    401 Broadway, 24th Floor, Orchard Cloud View, London
+                    Plot-47,Sanjeevini Nagar,Godhani Road,Zingabai Takli,Nagpur,Maharashtra,440030
                   </p>
                 </div>
               </div>
