--- a/Enterprise.html
+++ b/Enterprise.html
@@ -32,7 +32,7 @@
     </script>
   </head>
 <style>
-  <style>
+  
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
@@ -783,7 +783,7 @@
                       Our Location
                     </h5>
                     <p class="text-base text-body-color dark:text-dark-6">
-                      401 Broadway, 24th Floor, Orchard Cloud View, London
+                      Plot-47,Sanjeevini Nagar,Godhani Road,Zingabai Takli,Nagpur,Maharashtra,440030
                     </p>
                   </div>
                 </div>
@@ -897,76 +897,7 @@
     </section>
     <!-- ====== Contact End ====== -->
 
-    <!-- ====== Brands Section Start -->
-    <!-- <section class="pb-20 dark:bg-dark">
-      <div class="container px-4">
-        <div
-          class="-mx-4 flex flex-wrap items-center justify-center gap-8 xl:gap-11"
-        >
-          <a href="https://graygrids.com/">
-            <img
-              src="./assets/images/brands/graygrids.svg"
-              alt="graygrids"
-              class="dark:hidden"
-            />
-            <img
-              src="./assets/images/brands/graygrids-white.svg"
-              alt="graygrids"
-              class="hidden dark:block"
-            />
-          </a>
-          <a href="https://lineicons.com/">
-            <img
-              src="./assets/images/brands/lineicons.svg"
-              alt="lineicons"
-              class="dark:hidden"
-            />
-            <img
-              src="./assets/images/brands/lineicons-white.svg"
-              alt="graygrids"
-              class="hidden dark:block"
-            />
-          </a>
-          <a href="https://uideck.com/">
-            <img
-              src="./assets/images/brands/uideck.svg"
-              alt="uideck"
-              class="dark:hidden"
-            />
-            <img
-              src="./assets/images/brands/uideck-white.svg"
-              alt="graygrids"
-              class="hidden dark:block"
-            />
-          </a>
-          <a href="https://ayroui.com/">
-            <img
-              src="./assets/images/brands/ayroui.svg"
-              alt="ayroui"
-              class="dark:hidden"
-            />
-            <img
-              src="./assets/images/brands/ayroui-white.svg"
-              alt="graygrids"
-              class="hidden dark:block"
-            />
-          </a>
-          <a href="https://tailgrids.com/">
-            <img
-              src="./assets/images/brands/tailgrids.svg"
-              alt="tailgrids"
-              class="dark:hidden"
-            />
-            <img
-              src="./assets/images/brands/tailgrids-white.svg"
-              alt="graygrids"
-              class="hidden dark:block"
-            />
-          </a>
-        </div>
-      </div>
-    </section> -->
-    <!-- ====== Brands Section End -->
+    
 <!-- ====== Footer Section Start -->
 <footer class="wow fadeInUp relative z-10 bg-[#090E34] pt-20 lg:pt-[100px]" data-wow-delay=".15s">
   <div class="container">
